# tsgen

./: .dockerignore  .flaskenv  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/readme-snippets/: example_1.py  example_2.py  example_3.py
examples/: Dockerfile  api.py  app.py
examples/frontend/: .gitignore  .proxyrc  .proxyrc.js  main.html  package.json  tsconfig.json
examples/frontend/src/: index.html  tests.ts
src/tsgen/: __init__.py  apis.py  code_snippet_context.py  formatting.py
src/tsgen/integrations/: flask_integration.py  sanic_integration.py
src/tsgen/output_templates/: auto.py  fetch.py  ky.py
src/tsgen/types/: base.py  dict.py  nullable.py
test/: apis_test.py  code_snippet_context_test.py  formatting_test.py
test/integrations/: flask_integration_test.py  sanic_integration_test.py
test/types/: tuple_test.py
tsgen/: __init__.py  apis.py  apis__test.py  code_snippet_context.py  code_snippet_context__test.py  flask.py  flask__test.py  flask_integration.py  flask_integration__test.py  formatting.py  formatting__test.py  interfaces.py  interfaces__test.py  serde.py  serde__test.py  tsgen.py  tsgen__test.py  typehints.py  typetree.py  typetree__test.py
tsgen/types/: __init__.py  base.py  dates.py  datetime_node.py  dict.py  list.py  nullable__test.py  object.py  tuple.py  tuple__test.py  typetree.py  typetree__test.py
